--- a/src/main/resources/templates/pages/common/page.html
+++ b/src/main/resources/templates/pages/common/page.html
@@ -1,62 +1,64 @@
-<ul class="pagination pagination-sm no-margin pull-right">
-    <li><a class="first">首页</a></li>
-    <li><a class="pre">上一页</a></li>
-    <li><a class="next">下一页</a></li>
-    <li><a class="last">尾页</a></li>
-    <li><a class="rowCount">总记录数(0)</a></li>
-    <li><a class="pageCount">总页数(0)</a></li>
-    <li><a class="pageCurrent">当前页(1)</a></li>
-</ul>
-<script type="text/javascript">
-    $(function () {
-        $("#pageId").on("click", ".first,.pre,.next,.last", doJumpToPage);
-    });
+<div th:fragment="page">
+    <ul class="pagination pagination-sm no-margin pull-right">
+        <li><a class="first">首页</a></li>
+        <li><a class="pre">上一页</a></li>
+        <li><a class="next">下一页</a></li>
+        <li><a class="last">尾页</a></li>
+        <li><a class="rowCount">总记录数(0)</a></li>
+        <li><a class="pageCount">总页数(0)</a></li>
+        <li><a class="pageCurrent">当前页(1)</a></li>
+    </ul>
+    <script type="text/javascript">
+        $(function () {
+            $("#pageId").on("click", ".first,.pre,.next,.last", doJumpToPage);
+        });
 
-    //处理分页点击事件
-    function doJumpToPage() {
-        // debugger
-        //1.获得点击对象的class属性值
-        //prop()为一个jquery函数
-        //其语法为prop(属性名[,属性值])
-        let pageId = $("#pageId");
-        let cls = $(this).prop("class");
-        //2.基于class属性值修改当前页码值
-        //2.1获取当前页码值,总页数
-        let pageCurrent = pageId.data("pageCurrent");
-        let pageCount = pageId.data("pageCount");
-        //2.2修改页码值
-        if (cls === "first") {
-            pageCurrent = 1;
-        } else if (cls === "pre" && pageCurrent > 1) {
-            pageCurrent--
-        } else if (cls === "next" && pageCurrent < pageCount) {
-            pageCurrent++;
-        } else if (cls === "last") {
-            pageCurrent = pageCount;
-        } else {
-            return
+        //处理分页点击事件
+        function doJumpToPage() {
+            // debugger
+            //1.获得点击对象的class属性值
+            //prop()为一个jquery函数
+            //其语法为prop(属性名[,属性值])
+            let pageId = $("#pageId");
+            let cls = $(this).prop("class");
+            //2.基于class属性值修改当前页码值
+            //2.1获取当前页码值,总页数
+            let pageCurrent = pageId.data("pageCurrent");
+            let pageCount = pageId.data("pageCount");
+            //2.2修改页码值
+            if (cls === "first") {
+                pageCurrent = 1;
+            } else if (cls === "pre" && pageCurrent > 1) {
+                pageCurrent--
+            } else if (cls === "next" && pageCurrent < pageCount) {
+                pageCurrent++;
+            } else if (cls === "last") {
+                pageCurrent = pageCount;
+            } else {
+                return
+            }
+            pageId.data("pageCurrent", pageCurrent);
+            //3.基于新的页码值,重新执行查询操作
+            doGetObjects();
         }
-        pageId.data("pageCurrent", pageCurrent);
-        //3.基于新的页码值,重新执行查询操作
-        doGetObjects();
-    }
 
-    //设置分页信息
-    function doSetPagination(pageObject) {
-        console.log(pageObject);
-        //1.初始化记录总数
-        $(".rowCount").html("总记录数(" + pageObject.rowCount + ")");
-        //2.初始化总页数
-        $(".pageCount").html("总页数(" + pageObject.pageCount + ")");
-        //3.初始化当前页
-        $(".pageCurrent").html("当前页(" + pageObject.pageCurrent + ")");
+        //设置分页信息
+        function doSetPagination(pageObject) {
+            console.log(pageObject);
+            //1.初始化记录总数
+            $(".rowCount").html("总记录数(" + pageObject.rowCount + ")");
+            //2.初始化总页数
+            $(".pageCount").html("总页数(" + pageObject.pageCount + ")");
+            //3.初始化当前页
+            $(".pageCurrent").html("当前页(" + pageObject.pageCurrent + ")");
 
-        //=========
-        //4.存储当前页码值以及总页数
-        //data函数为jquery中的一个值绑定函数
-        //语法:data(key[,value]);
-        let pageId = $("#pageId");
-        pageId.data("pageCurrent", pageObject.pageCurrent);
-        pageId.data("pageCount", pageObject.pageCount);
-    }
-</script>
+            //=========
+            //4.存储当前页码值以及总页数
+            //data函数为jquery中的一个值绑定函数
+            //语法:data(key[,value]);
+            let pageId = $("#pageId");
+            pageId.data("pageCurrent", pageObject.pageCurrent);
+            pageId.data("pageCount", pageObject.pageCount);
+        }
+    </script>
+</div>
