--- a/src/main/resources/templates/pages/starter.html
+++ b/src/main/resources/templates/pages/starter.html
@@ -253,34 +253,16 @@ desired effect
             <ul class="sidebar-menu" data-widget="tree">
                 <li class="header">HEADER</li>
                 <!-- Optionally, you can add icons to the links -->
-                <li class="treeview">
+                <li class="treeview" th:each="m:${userMenus}">
                     <a href="#"><i class="fa fa-link"></i>
-                        <span>商品管理</span>
-                        <span class="pull-right-container">
-                <i class="fa fa-angle-left pull-right"></i>
-         </span>
-                    </a>
-                    <ul class="treeview-menu">
-                        <li><a id="load-base-id">基本管理</a></li>
-                        <li><a id="load-type-id">类目管理</a></li>
-                        <li><a id="load-brand-id">品牌管理</a></li>
-                        <li><a id="load-attr-id">属性管理</a></li>
-                    </ul>
-                </li>
-                <li class="treeview">
-                    <a href="#"><i class="fa fa-link"></i>
-                        <span>系统管理</span>
+                        <span>[[${m.name}]]</span>
                         <span class="pull-right-container">
                 <i class="fa fa-angle-left pull-right"></i>
               </span>
                     </a>
                     <ul class="treeview-menu">
-                        <li><a id="load-dept-id">部门管理</a></li>
-                        <li><a id="load-menu-id">菜单管理</a></li>
-                        <li><a id="load-role-id">角色管理</a></li>
-                        <li><a id="load-user-id">用户管理</a></li>
-                        <li><a id="load-log-id"> 日志管理</a></li>
-                        <li><a id="load-pwd-id"> 修改密码</a></li>
+                        <li th:each="c:${m.childMenus}"><a
+                                th:onclick="javascript:doLoadRS([[${c.url}]])">[[${c.name}]]</a></li>
                     </ul>
                 </li>
             </ul>
@@ -336,7 +318,7 @@ desired effect
                 <h3 class="control-sidebar-heading">Recent Activity</h3>
                 <ul class="control-sidebar-menu">
                     <li>
-                        <a href="javascript:;">
+                        <a href="javascript:">
                             <i class="menu-icon fa fa-birthday-cake bg-red"></i>
                             <div class="menu-info">
                                 <h4 class="control-sidebar-subheading">Langdon's Birthday</h4>
@@ -350,7 +332,7 @@ desired effect
                 <h3 class="control-sidebar-heading">Tasks Progress</h3>
                 <ul class="control-sidebar-menu">
                     <li>
-                        <a href="javascript:;">
+                        <a href="javascript:">
                             <h4 class="control-sidebar-subheading">
                                 Custom Template Design
                                 <span class="pull-right-container">
@@ -434,6 +416,10 @@ desired effect
         // doLoadUser();
     });
 
+    function doLoadRS(url) {
+        $("#mainContentId").load(url);
+    }
+
     //基于某个对象click事件,执行资源加载操作
     function doLoadUI(id, url) {
         $("#" + id).click(function () {
@@ -443,6 +429,7 @@ desired effect
             $("#mainContentId").load(url)
         })
     }
+
     //
     // function doLoadUser() {
     //     var url = "user/doGetLoginUser"
