--- a/src/main/resources/templates/pages/common/page.html
+++ b/src/main/resources/templates/pages/common/page.html
@@ -4,7 +4,7 @@
         <li><a class="pre">上一页</a></li>
         <li><a class="next">下一页</a></li>
         <li><a class="last">尾页</a></li>
-        <li><a class="rowCount">总记录数(0)</a></li>
+        <li><a class="rowCo哦unt">总记录数(0)</a></li>
         <li><a class="pageCount">总页数(0)</a></li>
         <li><a class="pageCurrent">当前页(1)</a></li>
     </ul>
